--- a/app/src/main/res/layout/fragment_message.xml
+++ b/app/src/main/res/layout/fragment_message.xml
@@ -18,9 +18,8 @@
         android:background="@color/colorPrimary"
         android:orientation="vertical">
 
-
         <CheckBox
-            android:id="@+id/checkBox2"
+            android:id="@+id/CheckboxBill"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"/>
@@ -59,6 +58,7 @@
             android:layout_height="wrap_content"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="20sp" />
+
 
 
     </LinearLayout>
