--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#36406b</color>
-    <color name="colorPrimaryDark">#caebf9</color>
+    <color name="colorPrimaryDark">#d1e6ef</color>
     <color name="colorAccent">#fc96bb</color>
     <color name="white">#ffffff</color>
 </resources>
