--- a/app/src/main/res/layout/fragment_recycler.xml
+++ b/app/src/main/res/layout/fragment_recycler.xml
@@ -6,6 +6,13 @@
     android:background="@color/colorPrimaryDark"
     android:orientation="vertical">
 
+    <ProgressBar
+        android:progress="80"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center"
+      />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerBill"
         android:layout_width="match_parent"
