--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/main_layout"
+    android:focusableInTouchMode="true"
     android:fitsSystemWindows="true"
     android:background="@color/colorPrimaryDark"
     tools:context=".MainActivity"
@@ -15,6 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:focusableInTouchMode="true"
         >
         <android.support.v7.widget.Toolbar
             android:layout_width="match_parent"
