--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#caebf9</color>
     <color name="colorAccent">#fc96bb</color>
     <color name="white">#ffffff</color>
+    <color name="colorBG">#b6c3d4</color>
+    <color name="color1">#1b1bef</color>
 </resources>
