--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorBG"
-        tools:context="com.gmail.tamyewwah.mywallet.Login">
+        tools:context="com.gmail.tamyewwah.mywallet.ResetPassword">
 
         <RelativeLayout
             android:id="@+id/reset1"
