--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -34,6 +34,9 @@
             android:title="@string/help" />
         </menu>
     </item>
-
+<item
+    android:id="@+id/nav_logout"
+    android:icon="@drawable/ic_exit_to_app_black_24dp"
+    android:title="Logout" />
 
 </menu>
