--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -60,7 +60,6 @@
 
         </android.support.design.widget.TextInputLayout>
 
-
         <android.support.design.widget.TextInputLayout
             android:id="@+id/input_rphoneno"
             android:layout_width="match_parent"
@@ -114,6 +113,25 @@
                 android:drawablePadding="20dp"
                 android:hint="@string/password"
                 android:inputType="textPassword"
+                android:padding="15dp"
+                android:paddingLeft="20dp" />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/input_rpin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp">
+
+            <EditText
+                android:id="@+id/rEditPin"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
+                android:drawablePadding="20dp"
+                android:hint="@string/pin"
+                android:inputType="numberPassword"
                 android:padding="15dp"
                 android:paddingLeft="20dp" />
 
