UseID for drawer, message

--- a/app/src/main/res/layout/fragment_recycler.xml
+++ b/app/src/main/res/layout/fragment_recycler.xml
@@ -11,12 +11,13 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_gravity="center"
+        android:id="@+id/progressbarMessage"
       />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerBill"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_margin="5dp"
         android:scrollbars="vertical" />
 
