--- a/app/src/main/res/layout/header_drawer.xml
+++ b/app/src/main/res/layout/header_drawer.xml
@@ -11,17 +11,17 @@
         android:contentDescription="@string/image"
         android:src="@color/colorPrimaryDark" />
     <TextView
+        android:id="@+id/drawerUserName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/name"
         android:textColor="@color/white"
         android:textStyle="bold"
         android:layout_marginTop="5dp"/>
 
     <TextView
+        android:id="@+id/drawerUserEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/email"
         android:textColor="@color/white"/>
 
 
