Add Card Details from fragment change to activity

--- a/app/src/main/res/layout/fragment_mywallet.xml
+++ b/app/src/main/res/layout/fragment_mywallet.xml
@@ -1,26 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerCard"
+    <ListView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:scrollbars="vertical" />
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true" />
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fabAdd"
+    <Button
+        android:id="@+id/buttonAdd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="33dp"
-        android:layout_marginRight="33dp"
+        android:onClick="activity_add_card"
+        android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp"
         android:layout_marginBottom="64dp"
-        app:backgroundTint="@color/cast_expanded_controller_background_color"
-        app:srcCompat="@android:drawable/ic_menu_add" />
+        android:text="Add Card" />
+
 </RelativeLayout>
