--- a/app/src/main/res/layout/activity_add_card.xml
+++ b/app/src/main/res/layout/activity_add_card.xml
@@ -45,6 +45,24 @@
             android:layout_height="54dp" />
 
         <android.support.design.widget.TextInputLayout
+            android:id="@+id/input_cardNum"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp">
+
+            <EditText
+                android:id="@+id/rEditCardNum"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawablePadding="20dp"
+                android:hint="@string/CardNum"
+                android:inputType="number"
+                android:padding="15dp"
+                android:paddingLeft="20dp" />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
             android:id="@+id/input_cvcNumber"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -56,7 +74,8 @@
                 android:drawablePadding="20dp"
                 android:hint="@string/CVC"
                 android:padding="15dp"
-                android:paddingLeft="20dp" />
+                android:paddingLeft="20dp"
+                android:inputType="number"/>
 
         </android.support.design.widget.TextInputLayout>
 
