--- a/app/src/main/res/layout/fragment_mywallet.xml
+++ b/app/src/main/res/layout/fragment_mywallet.xml
@@ -4,24 +4,21 @@
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark">
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view_2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/buttonAdd"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true" />
+        android:layout_marginBottom="10dp" />
 
     <Button
         android:id="@+id/buttonAdd"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
+        android:layout_marginBottom="55dp"
         android:onClick="activity_add_card"
-        android:layout_marginEnd="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="64dp"
         android:text="Add Card" />
 
 </RelativeLayout>
