--- a/app/src/main/res/layout/activity_add_card.xml
+++ b/app/src/main/res/layout/activity_add_card.xml
@@ -91,7 +91,8 @@
             android:drawablePadding="20dp"
             android:hint="@string/ValidTill"
             android:padding="15dp"
-            android:paddingLeft="20dp" />
+            android:paddingLeft="20dp"
+            android:inputType="date"/>
         </android.support.design.widget.TextInputLayout>
 
         <Button
