--- a/app/src/main/res/layout/fragment_transfer.xml
+++ b/app/src/main/res/layout/fragment_transfer.xml
@@ -80,21 +80,21 @@
         android:id="@+id/btn_transfer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/input_amount"
         android:layout_marginTop="10dp"
-        android:text="@string/transfer"
         android:background="@color/colorPrimary"
+        android:text="@string/transfer"
         android:textColor="@color/white"
-        android:textSize="15sp"
-        android:layout_below="@+id/input_amount"/>
+        android:textSize="15sp" />
 
-    <ProgressBar
-        android:id="@+id/progressBar"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/btn_transfer"
-        android:layout_gravity="center|bottom"
-        android:layout_marginBottom="10dp"
-        android:visibility="gone" />
+    <!--<ProgressBar-->
+        <!--android:id="@+id/progressBar"-->
+        <!--android:layout_centerHorizontal="true"-->
+        <!--android:layout_marginTop="10dp"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_below="@id/btn_transfer"-->
+        <!--android:layout_gravity="center|bottom"-->
+        <!--android:layout_marginBottom="10dp"-->
+        <!--android:visibility="gone" />-->
 </LinearLayout>
