--- a/app/src/main/res/layout/fragment_recycler1.xml
+++ b/app/src/main/res/layout/fragment_recycler1.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/colorPrimaryDark"
+    android:orientation="vertical">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerTransaction"
@@ -13,4 +15,4 @@
         android:paddingBottom="16dp"
         android:scrollbars="vertical" />
 
-</RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
